--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		</div>
 
 		<div id="control_panel">
-			<button id="" onclick="play()">Iniciar evolução</button></br>
+			<button id="" onclick="play()">teste de geração de expressões</button></br>
 		</div>
 
 	</body>
