--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<meta content="text/html"/>
 	<meta charset="UTF-8"/>
 
-	<script type="text/javascript" src=expression.js></script>
-	<script type="text/javascript" src=loadFile.js></script>
+	<script type="text/javascript" src=./scripts/expression.js></script>
+	<script type="text/javascript" src=./scripts/loadFile.js></script>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
