--- a/index.html
+++ b/index.html
@@ -95,10 +95,19 @@
 			</div>
 		</section>
 
-		<section> <!--PROJECT-->
-			<div class="page-header" id="project">
+	</div>
+	
+	<div class="jumbotron page-header">
+		<div class="text-center">
+			<h2>Ferramenta online</h2>
+		</div>
+	</div>
 
-				<h1>Ferramenta online</h1>
+	<div class="container">
+
+		<section> <!--PROJECT-->
+
+			<div class="page-header" id="project">
 
 				<section>
 					<div class="well" id="guide">
@@ -152,7 +161,7 @@
 							</span>
 						</div>
 
-						<div class="well">
+						<div class="well" style="background-color: white">
 							<p class="text-justify">OBS: O algoritmo precisa de pelo menos um ponto de entrada para funcionar. Em caso de vários pontos, certifique-se de que todos tem a mesma quantidade de variáveis, caso contrário, também não funcionará.
 						</div>
 
