--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<meta content="text/html"/>
 	<meta charset="UTF-8"/>
 
+	<script type="text/javascript" src=./scripts/math.js></script>
 	<script type="text/javascript" src=./scripts/expression.js></script>
 	<script type="text/javascript" src=./scripts/loadFile.js></script>
 
@@ -69,12 +70,22 @@
 				<div class="well">
 					<h2>Avisos</h2>
 
-					<p class="text-justify">O site ainda está em desenvolvimento. Podem acontecer problemas durante a execução de algumas operações.</p>
+					<p class="text-justify">O site ainda está em desenvolvimento. Podem acontecer problemas durante a execução de algumas operações. Críticas e sugestões são bem vindas. Informações de contato no final da página (ainda não tem email de contato).</p>
 
 					<h2>Updates</h2>
 
-					<p class="text-justify">-Novo quadro de avisos e updates no início da página.</p>
-					<p class="text-justify">-Leitura de dados funcionando e convertendo os valores para dataPoint.</p>
+					<p class="text-justify"><b>08/09/2017</b></p>
+					<p class="text-justify"> - Calculo do MSE totalmente funcional (ainda não está livre de eventuais bugs).</p>
+					<p class="text-justify"> - Coeficientes agora são ajustados utilizando regressão linear.</p>
+					<p class="text-justify"> - Incorporação da biblioteca math.js no código, pela licensa Apache-2.0. Link da biblioteca <a href="http://mathjs.org/index.html">aqui</a>. </p>
+
+					<p class="text-justify"><b>07/09/2017</b></p>
+					<p class="text-justify"> - Cálculo do MSE funcionando com coeficientes nulos.</p>
+					<p class="text-justify"> - Melhoramentos visuais (ao menos eu achei melhor, não sou webdesigner).</p>
+
+					<p class="text-justify"><b>06/09/2017</b></p>
+					<p class="text-justify"> - Leitura de dados funcionando e convertendo os valores para dataPoint.</p>
+					<p class="text-justify"> - Novo quadro de avisos e updates no início da página</p>
 
 					<p class="text-justify"></p>
 
@@ -209,7 +220,7 @@
 			<div class="page-header text-center" id="contact-us">
 				<h2>Contato</h2>
 				<p>Dúvidas, críticas ou sugestões?</p> 
-				<p>Contate o desenvolvedor pelo email: emailaqui@emailaqui.com</p> 
+				<p>Contate o desenvolvedor pelo email: emailaqui@hotmail.com</p> 
 				<p>Além disso, veja os <a href="https://github.com/gAldeia/Genetic-algorithm-symbolic-regression">algoritmos</a> desenvolvidos durante os estudos do projeto!</p>
 			</div>
 		</section>
