--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
 
 						<p class="text-justify">Para dados que vieram de um experimento, por exemplo, espera-se encontrar um modelo matemático que descreva os pontos da entrada.</p>
 
-						<button type="button" class="btn btn-primary" onclick="setup()">Preparar teste</button>
-						<button type="button" class="btn btn-primary" onclick="play()">Testar</button>
+						<button type="button" class="btn btn-primary btn-lg btn-block" onclick="setup()">Preparar teste</button>
+						<button type="button" class="btn btn-primary btn-lg btn-block" onclick="play()">Testar</button>
 
 						<div class="well" id="canvas-container">
 							<canvas class="text-center" width="0px" height="0px" id="canvas" >Seu browser não suporta algumas características do site.</canvas>
