--- a/index.html
+++ b/index.html
@@ -74,6 +74,13 @@
 
 					<h2>Updates</h2>
 
+					<p class="text-justify"><b>11/09/2017</b></p>
+					<p class="text-justify"> - Percebido inconsistência no ajuste dos coeficientes, código removido.</p>
+					<p class="text-justify"> - Nova classe, Population, para conter métodos de "gerenciamento" das expressões (mutação, crossover e seleção)</p>
+					<p class="text-justify"> - Population -> novo método para encontrar o indivíduo de melhor fitness</p>
+					<p class="text-justify"> - Population -> mutação implementada, que percorre cada termo de cada expressão e quando sorteado o termo é modificado. </p>
+
+
 					<p class="text-justify"><b>08/09/2017</b></p>
 					<p class="text-justify"> - Calculo do MSE totalmente funcional (ainda não está livre de eventuais bugs).</p>
 					<p class="text-justify"> - Coeficientes agora são ajustados utilizando regressão linear.</p>
