--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 	<meta content="text/html"/>
 	<meta charset="UTF-8"/>
 
-	<script type="text/javascript" src=./scripts/math.js></script>
 	<script type="text/javascript" src=./scripts/expression.js></script>
 	<script type="text/javascript" src=./scripts/loadFile.js></script>
 
@@ -73,6 +72,10 @@
 					<p class="text-justify">O site ainda está em desenvolvimento. Podem acontecer problemas durante a execução de algumas operações. Críticas e sugestões são bem vindas. Informações de contato no final da página (ainda não tem email de contato).</p>
 
 					<h2>Updates</h2>
+
+					<p class="text-justify"><b>13/09/2017</b></p>
+					<p class="text-justify"> - Regressão linear para ajustar parâmetros implementada e funcionando. Coeficientes voltaram a ser ajustados.</p>
+					<p class="text-justify"> - Removida a biblioteca math.js.</p>
 
 					<p class="text-justify"><b>12/09/2017</b></p>
 					<p class="text-justify"> - Revisão do código que cuida da leitura da entrada, agora mais modular e comentado.</p>
