--- a/index.html
+++ b/index.html
@@ -21,11 +21,38 @@
 			height: 100%;
 			outline: 1px solid black;
 		}
+		.jumbotron{
+			background: url("./images/bg.png") repeat-x center center fixed;
+			border-bottom: 2px solid #fff;
+			border-top: 2px solid #fff;
+		}
+		.vertical-center {
+			min-height: 100%;
+			min-height: 100vh;
+			width: 100%;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+		}
+		.vertical-center-small{
+			width: 100%;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+		}
+		.jumbotron-box {
+			opacity: 0.75;
+			box-shadow: 10px 10px 5px #000;
+		}
+		.body-background {
+			 background: url("./images/ibg.png") repeat-x center center fixed;
+		}
 	</style>
 
 </head>
 
-<body background="http://2.bp.blogspot.com/-UfAd2wJL8wE/TsdDJgxvv8I/AAAAAAAAADQ/S0DZGNjdu0Y/s1600/backgroundgray.png">
+<body class="body-background">
+	
 	<!--Cabeçalho da página-->
 	<nav class="navbar navbar-inverse navbar-fixed-top"> <!--NAVBAR-->
 		<div class="container">
@@ -41,18 +68,19 @@
 						<ul class="dropdown-menu">
 							<li><a href="#guide">Como utilizar a ferramenta online</a></li>
 							<li><a href="#input">Entrada de dados</a></li>
-							<li><a href="#output">Processamento</a></li>
-							<li><a href="#target">Resultados esperados</a></li>
+							<li><a href="#output">Resultados</a></li>
+							<li><a href="#explain">Resultados esperados</a></li>
 						</ul>
 					</li>
+					<li><a href="#updates">Updates</a></li>
 					<li><a href="#contact-us">Contato</a></li>
 				</ul><!--Lista de opções-->
 			</div><!--menu-->
 		</div><!--container-->
 	</nav><!--navbar-->
 
-	<div class="jumbotron page-header"> <!--JUMBOTRON-->
-		<div class=" text-center">
+	<div class="jumbotron vertical-center"> <!--JUMBOTRON-->
+		<div class="text-center well jumbotron-box">
 
 			<h2>Regressão Simbólica usando técnicas de Programação Genética</h2>
 
@@ -63,15 +91,171 @@
 
 	<div class="container">
 
-		<section> <!--MAIN-->
-			<div class="page-header" id="main">
+		<!-- EXEMPLO DE CAIXINHA DE CONTEÚDO
+
+			<section id="section-name">
+				<div class="page-header">
+
+					<div class="well">
+						<h2>Title da caixinha</h2><hr>
+
+						<p class="text-justify">Conteúdo da caixinha.</p>
+
+					</div>
+				</div>
+			</section>
+
+		-->
+
+		<section id="main">
+			<div class="page-header">
 
 				<div class="well">
-					<h2>Avisos</h2>
+					<h2>Página do projeto de iniciação científica</h2><hr>
 
-					<p class="text-justify">O site ainda está em desenvolvimento. Podem acontecer problemas durante a execução de algumas operações. Críticas e sugestões são bem vindas. Informações de contato no final da página (ainda não tem email de contato).</p>
+					<p class="text-justify">Um dia, aqui existirão informações curtas sobre o site.</p>
 
-					<h2>Updates</h2>
+					<div class="alert alert-info">
+						<p class="text-justify"><strong>Avisos:</strong> O site ainda está em desenvolvimento. Podem acontecer problemas durante a execução de algumas operações. Críticas e sugestões são bem vindas. Informações de contato no final da página (ainda não tem email de contato).</p>
+					</div>
+
+				</div>
+			</div>
+		</section>
+
+		<section id="about">
+			<div class="page-header">
+
+				<div class="well">
+					<h2>Sobre</h2><hr>
+
+					<p class="text-justify">Regressão simbólica é uma técnica que consiste na criação e manipulação de expressões matemáticas a fim de encontrar um modelo que seja capaz de descrever suficientemente bem uma série de pontos. As expressões são criadas arbitráriamente e são avaliadas.</p>
+
+					<p class="text-justify">Sua aplicação se torna muito mais poderosa com técnicas computacionais, já que o computador pode realizar muito mais rápido operações do que um humano. Assim, com a programação genética, podemos realizar uma busca ampla pelo universo de expressões matemáticas e tentar encontrar o modelo que descreve a série de pontos.</p>
+
+				</div>
+			</div>
+		</section>
+
+	</div>
+	
+	<div class="jumbotron vertical-center-small">
+		<div class="text-center well jumbotron-box">
+			<h2>Ferramenta online</h2>
+		</div>
+	</div>
+
+	<div class="container">
+
+		<section id="guide">
+			<div class="page-header">
+
+				<div class="well">
+					<h2>Como utilizar a ferramenta online</h2><hr>
+
+					<div class="row">
+						<div class="col-lg-4">
+
+							<h4>Entrada</h4>
+
+							<p class="text-justify">Os dados de entrada podem ser digitados manualmente ou carregados através de um arquivo de extensão .csv.</p>
+						</div>
+						<div class="col-lg-4">
+
+							<h4>Processamento</h4>
+
+							<p class="text-justify">O processamento é feito na sua própria máquina (cuidado, isso pode prejudicar o desempenho do seu sistema caso esteja realizando muitas operações ao mesmo tempo!).</p>
+						</div>
+						<div class="col-lg-4">
+
+							<h4>Saída</h4>
+
+							<p class="text-justify">Conforme os dados vão sendo processados e uma equação ideal é procurada, informações serão mostradas na aba "Resultados".</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section id="input">
+			<div class="page-header">
+
+				<div class="well">
+					<h2>Entrada de dados</h2><hr>
+
+					<p class="text-justify">Digite os dados aqui ou carregue um arquivo do seu computador:</p>
+
+					<div class="page-header">
+						<h4>Entrada manual de dados</h4>
+					
+						<textarea class="form-control" rows="3" placeholder="Digite os dados aqui, um ponto em cada linha, no seguinte esquema: y.yy, x1.x1x1, x2.x2x2, x3.x3x3" id="my-manualinput"></textarea>
+					</div>
+
+					<div class="page-header">
+						<h4>Upload de arquivo local</h4>
+
+						<p class="text-justify">Atenção: O arquivo deve ser do tipo .csv, com os dados separados por vírgulas.</p>
+
+						<span class="btn btn-default btn-file">
+							<input type="file" id="my-csvinput" accept=".csv" />
+						</span>
+					</div>
+
+					<div class="alert alert-danger">
+						<p class="text-justify"><strong>Atenção!</strong> O algoritmo precisa de pelo menos um ponto de entrada para funcionar. Em caso de vários pontos, certifique-se de que todos tem a mesma quantidade de variáveis, caso contrário, também não funcionará.</p>
+					</div>
+
+					<div class="page-header">
+						<button type="button" class="btn btn-primary btn-lg btn-block" onclick="manual_upload()">Usar valores digitados</button>
+						<button type="button" class="btn btn-info btn-lg btn-block" onclick="csv_upload()">Usar arquivo enviado</button>
+					</div>
+
+				</div>
+			</div>
+		</section>
+
+		<section id="output">
+			<div class="page-header">
+
+				<div class="well">
+					<h2>Resultados</h2><hr>
+
+					<p class="text-justify">Conforme a evolução for ocorrendo, informações sobre a população e a melhor resposta que conseguimos serão mostradas e atualizadas no quadro abaixo.</p>
+
+					<p class="text-justify">O que se espera é encontrar a equação que deu origem aos dados de entrada. Se os dados vieram de uma equação, espera-se encontrar a própria equação (ou uma muito próxima dela).</p>
+
+					<p class="text-justify">Para dados que vieram de um experimento, por exemplo, espera-se encontrar um modelo matemático que descreva os pontos da entrada.</p>
+
+					<button type="button" class="btn btn-primary btn-lg btn-block" onclick="setup()">Preparar teste</button>
+					<button type="button" class="btn btn-primary btn-lg btn-block" onclick="play()">Testar</button>
+
+					<div class="well" id="canvas-container">
+						<canvas class="text-center" width="0px" height="0px" id="canvas" >Seu browser não suporta essa característica do site.</canvas>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section id="explain">
+			<div class="page-header">
+
+				<div class="well">
+					<h2>O resultado obtido foi o esperado?</h2><hr>
+
+					<p class="text-justify">A evolução é muito influenciada pelos melhores indivíduos das primeiras gerações. Casos infelizes onde uma expressão insatisfatória (distante da expressão que rege os dados de entrada) guie esta primeira etapa podem acontecer. Com a primeira geração sendo criada aleatóriamente, o rumo da evolução pode acabar sendo erroneamente direcionado. Se o resultado obtido não parece, a princípio, correto, tente executar o algoritmo mais uma vez. Este fator aleatório pode ter uma influência minimizada quando vários testes são realizados, ou quando a população é grande. </p>
+
+				</div>
+			</div>
+		</section>
+
+		<section id="updates">
+			<div class="page-header">
+
+				<div class="well">
+					<h2>Updates (desde a origem do site):</h2><hr>
+
+					<p class="text-justify"><b>14/09/2017</b></p>
+					<p class="text-justify"> - Novo visual do site!</p>
 
 					<p class="text-justify"><b>13/09/2017</b></p>
 					<p class="text-justify"> - Regressão linear para ajustar parâmetros implementada e funcionando. Coeficientes voltaram a ser ajustados.</p>
@@ -101,139 +285,26 @@
 
 					<p class="text-justify"></p>
 
+					<div class="alert alert-info">
+						<p class="text-justify"><strong>Obs:</strong> Para acompanhar cada detalhe do que foi feito, visite o github. O repositório é sempre atualizado ao mesmo tempo que este quadro de updates.</p>
+					</div>
+
 				</div>
 			</div>
 		</section> 
 
-		<section> <!--ABOUT-->
-			<div class="page-header" id="about">
+		<section id="contact-us">
+			<div class="page-header">
 
-				<h1>Sobre</h1>
+				<div class="well text-center">
 
-				<p class="text-justify">Regressão simbólica é uma técnica que consiste na criação e manipulação de expressões matemáticas a fim de encontrar um modelo que seja capaz de descrever suficientemente bem uma série de pontos. As expressões são criadas arbitráriamente e são avaliadas.</p>
+					<h2>Contato</h2><hr>
 
-				<p class="text-justify">Sua aplicação se torna muito mais poderosa com técnicas computacionais, já que o computador pode realizar muito mais rápido operações do que um humano. Assim, com a programação genética, podemos realizar uma busca ampla pelo universo de expressões matemáticas e tentar encontrar o modelo que descreve a série de pontos.</p>
+					<p>Dúvidas, críticas ou sugestões?</p> 
+					<p>Contate o desenvolvedor pelo email: emailaqui@hotmail.com</p> 
+					<p>Além disso, veja os <a href="https://github.com/gAldeia/Genetic-algorithm-symbolic-regression">algoritmos</a> desenvolvidos durante os estudos do projeto!</p>
 
-				<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis tincidunt congue. Sed dapibus, augue vitae varius facilisis, nisl felis rutrum nisi, vitae elementum eros tellus aliquam ligula. Curabitur aliquet, urna eget pellentesque tempus, quam nulla lacinia lacus, eu posuere lacus lectus vitae lorem. Nullam egestas dignissim ex et tempus. Cras euismod sed magna vel ultricies. Nulla pretium nisi id massa varius accumsan. Curabitur pharetra justo metus, id vestibulum ipsum hendrerit sit amet. Cras enim nunc, tempus a dapibus nec, accumsan ac sem. In dapibus placerat lacinia.</p>
-			</div>
-		</section>
-
-	</div>
-	
-	<div class="jumbotron page-header">
-		<div class="text-center">
-			<h2>Ferramenta online</h2>
-		</div>
-	</div>
-
-	<div class="container">
-
-		<section> <!--PROJECT-->
-
-			<div class="page-header" id="project">
-
-				<section>
-					<div class="well" id="guide">
-
-						<h1>Como utilizar a ferramenta online</h1>
-
-						<div class="row">
-							<div class="col-lg-4">
-
-								<h4>Entrada</h4>
-
-								<p class="text-justify">Os dados de entrada podem ser digitados manualmente ou carregados através de um arquivo de extensão .csv.</p>
-							</div>
-							<div class="col-lg-4">
-
-								<h4>Processamento</h4>
-
-								<p class="text-justify">O processamento é feito na sua própria máquina (cuidado, isso pode prejudicar o desempenho do seu sistema caso esteja realizando muitas operações ao mesmo tempo!).</p>
-							</div>
-							<div class="col-lg-4">
-
-								<h4>Saída</h4>
-
-								<p class="text-justify">Conforme os dados vão sendo processados e uma equação ideal é procurada, informações serão mostradas na aba "Resultados".</p>
-							</div>
-						</div>
-
-					</div>
-				</section>
-
-				<section>
-					<div class="well" id="input">
-
-						<h1>Entrada de dados</h1>
-
-						<p class="text-justify">Digite os dados aqui ou carregue um arquivo do seu computador:</p>
-
-						<div class="page-header">
-							<h4>Entrada manual de dados</h4>
-						
-							<textarea class="form-control" rows="3" placeholder="Digite os dados aqui, um ponto em cada linha, no seguinte esquema: y.yy, x1.x1x1, x2.x2x2, x3.x3x3" id="my-manualinput"></textarea>
-						</div>
-
-						<div class="page-header">
-							<h4>Upload de arquivo local</h4>
-
-							<p class="text-justify">Atenção: O arquivo deve ser do tipo .csv, com os dados separados por vírgulas.</p>
-
-							<span class="btn btn-default btn-file">
-								<input type="file" id="my-csvinput" accept=".csv" />
-							</span>
-						</div>
-
-						<div class="well" style="background-color: white">
-							<p class="text-justify">OBS: O algoritmo precisa de pelo menos um ponto de entrada para funcionar. Em caso de vários pontos, certifique-se de que todos tem a mesma quantidade de variáveis, caso contrário, também não funcionará.
-						</div>
-
-						<div class="page-header">
-							<button type="button" class="btn btn-primary btn-lg btn-block" onclick="manual_upload()">Usar valores digitados</button>
-							<button type="button" class="btn btn-info btn-lg btn-block" onclick="csv_upload()">Usar arquivo enviado</button>
-						</div>
-
-					</div>
-				</section>
-
-				<section>
-					<div class="well" id="output">
-
-						<h1>Resultados</h1>
-
-						<p class="text-justify">Conforme a evolução for ocorrendo, informações sobre a população e a melhor resposta que conseguimos serão mostradas e atualizadas no quadro abaixo.</p>
-
-						<p class="text-justify">O que se espera é encontrar a equação que deu origem aos dados de entrada. Se os dados vieram de uma equação, espera-se encontrar a própria equação (ou uma muito próxima dela).</p>
-
-						<p class="text-justify">Para dados que vieram de um experimento, por exemplo, espera-se encontrar um modelo matemático que descreva os pontos da entrada.</p>
-
-						<button type="button" class="btn btn-primary btn-lg btn-block" onclick="setup()">Preparar teste</button>
-						<button type="button" class="btn btn-primary btn-lg btn-block" onclick="play()">Testar</button>
-
-						<div class="well" id="canvas-container">
-							<canvas class="text-center" width="0px" height="0px" id="canvas" >Seu browser não suporta algumas características do site.</canvas>
-						</div>
-					</div>
-				</section>
-
-				<section>
-					<div class="well" id="target">
-
-						<h1>O resultado obtido foi o esperado?</h1>
-
-						<p class="text-justify">A evolução é muito influenciada pelos melhores indivíduos das primeiras gerações. Casos infelizes onde uma expressão insatisfatória (distante da expressão que rege os dados de entrada) guie esta primeira etapa podem acontecer. Com a primeira geração sendo criada aleatóriamente, o rumo da evolução pode acabar sendo erroneamente direcionado. Se o resultado obtido não parece, a princípio, correto, tente executar o algoritmo mais uma vez. Este fator aleatório pode ter uma influência minimizada quando vários testes são realizados, ou quando a população é grande. </p>
-					</div>
-				</section>
-
-			</div>
-		</section>
-
-		<section><!--CONTACT-US-->
-			<div class="page-header text-center" id="contact-us">
-				<h2>Contato</h2>
-				<p>Dúvidas, críticas ou sugestões?</p> 
-				<p>Contate o desenvolvedor pelo email: emailaqui@hotmail.com</p> 
-				<p>Além disso, veja os <a href="https://github.com/gAldeia/Genetic-algorithm-symbolic-regression">algoritmos</a> desenvolvidos durante os estudos do projeto!</p>
+				</div>
 			</div>
 		</section>
 	</div>
