--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta content="text/html"/>
 	<meta charset="UTF-8"/>
 
-	<script type="text/javascript" src=./scripts/expression.js></script>
+	<script type="text/javascript" src=./scripts/newExpression.js></script>
 	<script type="text/javascript" src=./scripts/loadFile.js></script>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -256,11 +256,15 @@
 				<div class="well">
 					<h2>Updates (desde a origem do site):</h2><hr>
 
+					<p class="text-justify"><b>20/09/2017</b></p>
+					<p class="text-justify"> - Reescritas as classes no modelo singletron, para conseguir definir métodos/variáveis privados/públicos</p>
+					<p class="text-justify"> - Regressão linear corrigida (ainda não sabemos se está 100% correta)</p>
+
 					<p class="text-justify"><b>14/09/2017</b></p>
 					<p class="text-justify"> - Novo visual do site!</p>
 
 					<p class="text-justify"><b>13/09/2017</b></p>
-					<p class="text-justify"> - Regressão linear para ajustar parâmetros implementada e funcionando. Coeficientes voltaram a ser ajustados.</p>
+					<p class="text-justify"> - Regressão linear para ajustar parâmetros implementada e funcionando. Coeficientes voltaram a ser ajustados (sem certeza de que está certo).</p>
 					<p class="text-justify"> - Removida a biblioteca math.js.</p>
 
 					<p class="text-justify"><b>12/09/2017</b></p>
