Revisão mse e gradiente descendente

--- a/index.html
+++ b/index.html
@@ -256,6 +256,10 @@
 				<div class="well">
 					<h2>Updates (desde a origem do site):</h2><hr>
 
+					<p class="text-justify"><b>21/09/2017</b></p>
+					<p class="text-justify"> - Corrigido erro (feio) na busca do melhor indivíduo</p>
+					<p class="text-justify"> - Revisão do código da regressão linear</p>
+
 					<p class="text-justify"><b>20/09/2017</b></p>
 					<p class="text-justify"> - Reescritas as classes no modelo singletron, para conseguir definir métodos/variáveis privados/públicos</p>
 					<p class="text-justify"> - Regressão linear corrigida (ainda não sabemos se está 100% correta)</p>
