Local search implementado

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 			<div class="page-header">
 
 				<div class="well">
-					<h2>O resultado obtido foi o esperado?</h2><hr>
+					<h2>O resultado obtido foi satisfatório?</h2><hr>
 
 					<p class="text-justify">A evolução é muito influenciada pelos melhores indivíduos das primeiras gerações. Casos infelizes onde uma expressão insatisfatória (distante da expressão que rege os dados de entrada) guie esta primeira etapa podem acontecer. Com a primeira geração sendo criada aleatóriamente, o rumo da evolução pode acabar sendo erroneamente direcionado. Se o resultado obtido não parece, a princípio, correto, tente executar o algoritmo mais uma vez. Este fator aleatório pode ter uma influência minimizada quando vários testes são realizados, ou quando a população é grande. </p>
 
@@ -255,6 +255,9 @@
 
 				<div class="well">
 					<h2>Updates (desde a origem do site):</h2><hr>
+
+					<p class="text-justify"><b>24/09/2017</b></p>
+					<p class="text-justify"> - Local search (primitivo) implementado: busca a melhor opção de operação para cada um dos minitermos</p>
 
 					<p class="text-justify"><b>21/09/2017</b></p>
 					<p class="text-justify"> - Corrigido erro (feio) na busca do melhor indivíduo</p>
