ajuste na impressão de dados

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 					<div class="page-header">
 						<h4>Entrada manual de dados</h4>
 					
-						<textarea class="form-control" rows="3" placeholder="Digite os dados aqui, um ponto em cada linha, no seguinte esquema: y.yy, x1.x1x1, x2.x2x2, x3.x3x3" id="my-manualinput"></textarea>
+						<textarea class="form-control" rows="3" placeholder="Digite os dados aqui. Um ponto em cada linha, no seguinte esquema: f(x1, x2, ... xn), x1, x2, ..., xn" id="my-manualinput"></textarea>
 					</div>
 
 					<div class="page-header">
@@ -255,6 +255,9 @@
 
 				<div class="well">
 					<h2>Updates (desde a origem do site):</h2><hr>
+
+					<p class="text-justify"><b>26/09/2017</b></p>
+					<p class="text-justify"> - Impressão do MSE na tela</p>
 
 					<p class="text-justify"><b>24/09/2017</b></p>
 					<p class="text-justify"> - Local search (primitivo) implementado: busca a melhor opção de operação para cada um dos minitermos</p>
