Update na busca local

--- a/index.html
+++ b/index.html
@@ -256,6 +256,10 @@
 				<div class="well">
 					<h2>Updates (desde a origem do site):</h2><hr>
 
+					<p class="text-justify"><b>28/09/2017</b></p>
+					<p class="text-justify"> - Busca local agora faz uma varredura nos expoentes de cada mini termo também, incrementando e decrementando 1 unidade.</p>
+					<p class="text-justify"> - NOVO ISSUE NO GITHUB, PARA MELHORAR O DESEMPENHO DA BUSCA LOCAL (aquilo ainda pode ser muito otimizado)</p
+
 					<p class="text-justify"><b>26/09/2017</b></p>
 					<p class="text-justify"> - Impressão do MSE na tela</p>
 
