Animação para entreter

--- a/gyro/index.html
+++ b/gyro/index.html
@@ -39,7 +39,7 @@
 
 </head>
 
-<body class="body-background">
+<body class="body-background" onload="setup_gyro()">
 	
 	<!--Cabeçalho da página-->
 	<nav class="navbar navbar-inverse navbar-fixed-top"> <!--NAVBAR-->
