--- a/index.html
+++ b/index.html
@@ -224,7 +224,9 @@
 					<p class="text-justify"><b>02/10/2017</b></p>
 					<p class="text-justify"> - Cálculo do coeficiente arrumado.</p>
 					<p class="text-justify"> - Corrigido individuos com alto mse se destacando na primeira pop.</p>
-					<p class="text-justify"> - Remake visual.</p>
+					<p class="text-justify"> - Remake visual. Remoção de algumas coisas desnecessárias.</p>
+					<p class="text-justify"> - Saída de dados agora não usa canvas e é selecionável.</p>
+					<p class="text-justify"> - Textos revisados.</p>
 
 					<p class="text-justify"><b>28/09/2017</b></p>
 					<p class="text-justify"> - Busca local agora faz uma varredura nos expoentes de cada mini termo também, incrementando e decrementando 1 unidade.</p>
