avisos para o usuário ao digitar a entrada

--- a/index.html
+++ b/index.html
@@ -182,9 +182,8 @@
 							</div>
 					</div><br>
 
-					<div class="alert alert-danger">
-						<p class="text-justify"><strong>Atenção!</strong> O algoritmo precisa de pelo menos uma linha de entrada para funcionar. Em caso de vários pontos, certifique-se de que todos tem a mesma quantidade de variáveis, caso contrário, também não funcionará. O site só aceita arquivos de extensão .csv.</p>
-					</div>
+					<div id="notification"></div>
+					
 				</div>
 			</section>
 
