scripts carregados após terminar o loading do site (boa prática)

--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
 	<meta content="text/html"/>
 	<meta charset="UTF-8"/>
 
-	<script type="text/javascript" src=./scripts/newExpression.js></script>
-	<script type="text/javascript" src=./scripts/loadFile.js></script>
-
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
 	<title>Regressão Simbólica - Ferramente Online</title>
@@ -52,7 +49,7 @@
 			<div class="navbar-header">
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">Menu
 			</button>
-				<a class="navbar-brand" href="#">Regressão Simbólica</a>
+				<a class="navbar-brand" href="#"><u><strong>Regressão</strong><small>:</small> Simbólica</u></a>
 			</div><!--logo do site-->
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav">
@@ -287,6 +284,9 @@
 			</section>
 		</div>
 	</div>
+
+	<script type="text/javascript" src=./scripts/loadFile.js></script>
+	<script type="text/javascript" src=./scripts/newExpression.js></script>
 
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
