scripts carregados após terminar o loading do site (boa prática)

--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
 
 					<p class="text-justify"><b>07/10/2017</b></p>
 					<p class="text-justify"> - Textos e códigos revisados.</p>
+					<p class="text-justify"> - Pequena otimização no loading da página.</p>
 
 					<p class="text-justify"><b>03/10/2017</b></p>
 					<p class="text-justify"> - Validação da entrada do usuário.</p>
