correção de erros de digitação

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-	<title>Regressão Simbólica - Ferramente Online</title>
+	<title>Regressão Simbólica - Ferramenta Online</title>
 
 	<style>
 		.jumbotron{
@@ -49,7 +49,7 @@
 			<div class="navbar-header">
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">Menu
 			</button>
-				<a class="navbar-brand" href="#"><u><strong>Regressão</strong><small>:</small> Simbólica</u></a>
+				<a class="navbar-brand" href="#"><u><strong>Regressão</strong> Simbólica</u></a>
 			</div><!--logo do site-->
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav">
