--- a/index.html
+++ b/index.html
@@ -105,7 +105,6 @@
 					<h2>Sobre</h2>
 
 					<p class="text-justify">Regressão simbólica é uma técnica que consiste na criação e manipulação de expressões matemáticas a fim de encontrar um modelo que seja capaz de descrever suficientemente bem uma série de pontos. Existem diversas técnicas para isso.</p>
-
 					<p class="text-justify">Sua aplicação se torna muito mais poderosa com técnicas computacionais, já que o computador pode realizar operações muito mais rápido do que um humano. A ideia de regressão simbólica foi introduzida originalmente por Koza, em seu livro Genetic Programming; e desde então, a técnica tem sido estudada e aprimorada. Este site implementa alguns algoritmos poderosos de regressão simbólica, com o objetivo de oferecer uma ferramenta online que aplica tais técnicas num ambiente agradável.</p>
 				</div>
 			</section>
@@ -139,7 +138,6 @@
 					<h2>Entrada de dados</h2>
 
 					<p class="text-justify">Digite os dados aqui ou carregue um arquivo do seu computador:</p>
-
 					<div class="row">
 							<div class="col-lg-6">
 								<h4>Entrada manual de dados</h4>
@@ -160,13 +158,13 @@
 							<div class="col-lg-6">
 								<button type="button" class="btn btn-primary btn-lg btn-block" onclick="manual_upload(), setup()">Usar valores digitados</button>
 							</div>
-
 							<div class="col-lg-6">
 								<button type="button" class="btn btn-info btn-lg btn-block" onclick="csv_upload(), setup()">Usar arquivo enviado</button>
 							</div>
 					</div><br>
 
-					<div id="notification"></div>
+					<div id="notification">
+					</div>
 					
 				</div>
 			</section>
@@ -176,11 +174,9 @@
 					<h2>Resultados</h2>
 
 					<p class="text-justify">O que se espera é encontrar a equação que deu origem aos dados de entrada. Se os dados vieram de uma equação, espera-se encontrar a própria equação (ou uma muito próxima dela).</p>
-
 					<p class="text-justify">Para dados que vieram de um experimento, por exemplo, espera-se encontrar um modelo matemático que descreva os pontos da entrada.</p>
 
 					<button type="button" class="btn btn-primary btn-lg btn-block" onclick="run_ITLS()">Algoritmo IT-LS (Interaction Transformation Local Search)</button>
-
 					<button type="button" class="btn btn-primary btn-lg btn-block" onclick="run_SymTree()">Algoritmo SymTree (não implementado ainda)</button>
 
 					<div id="results" class="page-header">
@@ -266,14 +262,11 @@
 					<p class="text-justify"><b>06/09/2017</b></p>
 					<p class="text-justify"> - Leitura de dados funcionando e convertendo os valores para dataPoint.</p>
 					<p class="text-justify"> - Novo quadro de avisos e updates no início da página</p>
-
-					<p class="text-justify"></p>
 				</div>
 			</section> 
 
 			<section id="contact-us">
 				<div class="page-header text-center">
-
 
 					<h2>Contato</h2>
 
@@ -286,8 +279,10 @@
 		</div>
 	</div>
 
+	<!-- scripts dos algoritmos de regressão simbólica-->
 	<script type="text/javascript" src=./scripts/loadFile.js></script>
-	<script type="text/javascript" src=./scripts/newExpression.js></script>
+	<script type="text/javascript" src=./scripts/ITLS.js></script>
+	<script type="text/javascript" src=./scripts/SymTree.js></script>
 
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
