Início da implementação SymTree

--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
 
 					<div class="row">
 							<div class="col-lg-6">
-								<button type="button" class="btn btn-primary btn-lg btn-block" onclick="manual_upload(), setup()">Usar valores digitados</button>
+								<button type="button" class="btn btn-primary btn-lg btn-block" onclick="manual_upload()">Usar valores digitados</button>
 							</div>
 							<div class="col-lg-6">
-								<button type="button" class="btn btn-info btn-lg btn-block" onclick="csv_upload(), setup()">Usar arquivo enviado</button>
+								<button type="button" class="btn btn-info btn-lg btn-block" onclick="csv_upload()">Usar arquivo enviado</button>
 							</div>
 					</div><br>
 
@@ -201,6 +201,12 @@
 					<div class="alert alert-info">
 						<p class="text-justify"><strong>Obs:</strong> Para acompanhar cada detalhe do que foi feito, visite o github. O repositório é sempre atualizado ao mesmo tempo que este quadro de updates.</p>
 					</div>
+
+					<p class="text-justify"><b>10/10/2017</b></p>
+					<p class="text-justify"> - Critério de parada para o algoritmo IT-LS.</p>
+					<p class="text-justify"> - Início da implementação do novo algoritmo SymTree: Objetos termo e expressão linear criados.</p>
+					<p class="text-justify"> - Criação da raiz da regressão (root).</p>
+					<p class="text-justify"> - Reorganização de métodos e variáveis no código, para que exista uma base "universal", que rode em qualquer algoritmo de regressão e não tenha nenhum fragmento de código dependente de outro a não ser da base (Base é o atual algoritmo loadFile, que faz leitura, validação e processamento da entrada).</p>
 
 					<p class="text-justify"><b>07/10/2017</b></p>
 					<p class="text-justify"> - Textos e códigos revisados.</p>
