calculo do score, ajuste dos coeficientes e criação do laço principal

--- a/index.html
+++ b/index.html
@@ -202,6 +202,12 @@
 						<p class="text-justify"><strong>Obs:</strong> Para acompanhar cada detalhe do que foi feito, visite o github. O repositório é sempre atualizado ao mesmo tempo que este quadro de updates.</p>
 					</div>
 
+					<p class="text-justify"><b>12/10/2017</b></p>
+					<p class="text-justify"> - Calculo do score criado.</p>
+					<p class="text-justify"> - Ajuste dos coeficientes.</p>
+					<p class="text-justify"> - Criado laço principal do SymTree (ainda não funcional).</p>
+					<p class="text-justify"> - Simplificação de expressões criada.</p>
+
 					<p class="text-justify"><b>10/10/2017</b></p>
 					<p class="text-justify"> - Critério de parada para o algoritmo IT-LS.</p>
 					<p class="text-justify"> - Início da implementação do novo algoritmo SymTree: Objetos termo e expressão linear criados.</p>
