iteração e inversa criadas

--- a/index.html
+++ b/index.html
@@ -207,6 +207,8 @@
 					<p class="text-justify"> - Ajuste dos coeficientes.</p>
 					<p class="text-justify"> - Criado laço principal do SymTree (ainda não funcional).</p>
 					<p class="text-justify"> - Simplificação de expressões criada.</p>
+					<p class="text-justify"> - operação de interação criada.</p>
+					<p class="text-justify"> - operação de interação inversa criada.</p>
 
 					<p class="text-justify"><b>10/10/2017</b></p>
 					<p class="text-justify"> - Critério de parada para o algoritmo IT-LS.</p>
@@ -283,7 +285,7 @@
 					<h2>Contato</h2>
 
 					<p>Dúvidas, críticas ou sugestões?</p> 
-					<p>Contate o desenvolvedor pelo email: guilherme.aldeia@aluno.ufabc.edu.com</p> 
+					<p>Contate o desenvolvedor pelo email: guilherme.aldeia@aluno.ufabc.edu.br</p> 
 					<p>Além disso, veja os <a href="https://github.com/gAldeia/Genetic-algorithm-symbolic-regression">algoritmos</a> desenvolvidos durante os estudos do projeto!</p>
 
 				</div>
