correções nos códigos

--- a/index.html
+++ b/index.html
@@ -202,6 +202,11 @@
 						<p class="text-justify"><strong>Obs:</strong> Para acompanhar cada detalhe do que foi feito, visite o github. O repositório é sempre atualizado ao mesmo tempo que este quadro de updates.</p>
 					</div>
 
+					<p class="text-justify"><b>14/10/2017</b></p>
+					<p class="text-justify"> - Corrigido erro no ajuste dos coeficientes.</p>
+					<p class="text-justify"> - Corrigidas algumas inconsistências encontradas no expand de SymTree.</p>
+
+
 					<p class="text-justify"><b>13/10/2017</b></p>
 					<p class="text-justify"> - ITLS agora cria tamanhos diferentes de expressões numa mesma população.</p>
 					<p class="text-justify"> - Nova mensagem para o usuário quando não há arquivo enviado e tenta usar os dados de arquivo enviado.</p>
