correção na busca local

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
 	<style>
 		.jumbotron{
-			background: url("./images/bg.png") repeat center center fixed;
+			/*background: url("./images/bg.png") repeat center center fixed;*/
+			background: url("./images/main-ibg.png") repeat center;
 			border-bottom: 3px solid #fff;
 			border-top: 3px solid #fff;
 		}
@@ -31,7 +32,8 @@
 			box-shadow: 10px 10px 5px #000;
 		}
 		.body-background {
-			 background: url("./images/ibg.png") repeat center center fixed;
+			 /*background: url("./images/ibg.png") repeat center center fixed;*/
+			 background: url("./images/main-bg.png") repeat center;
 		}
 		.well{
 			border-radius: 24px 24px 24px 24px;
@@ -203,8 +205,11 @@
 					</div>
 
 					<p class="text-justify"><b>14/10/2017</b></p>
-					<p class="text-justify"> - Corrigido erro no ajuste dos coeficientes.</p>
+					<p class="text-justify"> - Corrigidos erros no ajuste dos coeficientes.</p>
+					<p class="text-justify"> - Busca local em ITLS corrigida e aprimorada.</p>
 					<p class="text-justify"> - Corrigidas algumas inconsistências encontradas no expand de SymTree.</p>
+					<p class="text-justify"> - Classe operator incorporada no ITLS.</p>
+					<p class="text-justify"> - Removidos backgrounds fixos (segundo fontes, tem um peso no desempenho do site, inclusive os backgrounds fixos são ignorados quando acessados por dispositivos mobile).</p>
 
 
 					<p class="text-justify"><b>13/10/2017</b></p>
