entrada pode ser separada por tabulação também

--- a/gyro/index.html
+++ b/gyro/index.html
@@ -51,6 +51,7 @@
 					<li><a href="#">Início</a></li>
 					<li><a href="#explicacao">Notas de estudo</a></li>
 					<li><a href="#source">Códigos</a></li>
+					<li><a href="#contact">Contato</a></li>
 				</ul><!--Lista de opções-->
 			</div><!--menu-->
 		</div><!--container-->
@@ -151,7 +152,13 @@
 					<li><a target="_blank" href="./scripts/rocketLabGyro.js">Código de desenho e rotação do foguete</a>;</li>
 					<li><a target="_blank" href="./src/main.ino">Código do arduíno de leitura de dados do sensor</a> (ainda em desenvolvimento).</li>
 				</ul>
-			</div>	
+			</div>
+			<div class="page-header text-center" id="contact">
+				<h2>Contato</h2>
+
+				<p>Dúvidas, críticas ou sugestões?</p> 
+				<p>Contate o desenvolvedor pelo email: guilherme.aldeia@aluno.ufabc.edu.br</p>
+			</div>
 		</div>
 	</div>
 
