entrada pode ser separada por tabulação também

--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
 					</div>
 
 					<p class="text-justify"><b>14/10/2017</b></p>
+					<p class="text-justify"> - Entrada pode ser separada com tabulação também (ou com espaços ou vírgulas ou as 3 coisas juntas).</p>
 					<p class="text-justify"> - Corrigidos erros no ajuste dos coeficientes.</p>
 					<p class="text-justify"> - Busca local em ITLS corrigida e aprimorada.</p>
 					<p class="text-justify"> - Corrigidas algumas inconsistências encontradas no expand de SymTree.</p>
