--- a/index.html
+++ b/index.html
@@ -181,6 +181,9 @@
 					<button type="button" class="btn btn-primary btn-lg btn-block" onclick="run_ITLS()">Algoritmo IT-LS (Interaction Transformation Local Search)</button>
 					<button type="button" class="btn btn-primary btn-lg btn-block" onclick="run_SymTree()">Algoritmo SymTree (Symbolic Tree - em fase de testes)</button>
 
+					<div class="progress" id="loading">
+					</div>
+
 					<div id="results" class="page-header">
 					</div>
 				</div>
