Novo texto de update

--- a/index.html
+++ b/index.html
@@ -207,6 +207,9 @@
 						<p class="text-justify"><strong>Obs:</strong> Para acompanhar cada detalhe do que foi feito, visite o github. O repositório é sempre atualizado ao mesmo tempo que este quadro de updates.</p>
 					</div>
 
+					<p class="text-justify"><b>21/10/2017</b></p>
+					<p class="text-justify"> - SymTree agora escreve os resultados na página.</p>
+
 					<p class="text-justify"><b>19/10/2017</b></p>
 					<p class="text-justify"> - Início da implementação de um novo método interno no ajuste dos coeficientes, que faz com que o ajuste seja mais preciso e mais rápido em menos iterações.</p>
 
