--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 					<p class="text-justify">Para dados que vieram de um experimento, por exemplo, espera-se encontrar um modelo matemático que descreva os pontos da entrada.</p>
 
 					<button type="button" class="btn btn-primary btn-lg btn-block" onclick="run_ITLS()">Algoritmo IT-LS (Interaction Transformation Local Search)</button>
-					<button type="button" class="btn btn-primary btn-lg btn-block" onclick="run_SymTree()">Algoritmo SymTree (Symbolic Tree - em fase de testes)</button>
+					<button type="button" class="btn btn-primary btn-lg btn-block" onclick="run_SymTree()">Algoritmo SymTree (Symbolic Tree)</button>
 
 					<div class="progress" id="loading">
 					</div>
@@ -204,8 +204,12 @@
 					<h2>Updates (desde a origem do site):</h2>
 
 					<div class="alert alert-info">
-						<p class="text-justify"><strong>Obs:</strong> Para acompanhar cada detalhe do que foi feito, visite o github. O repositório é sempre atualizado ao mesmo tempo que este quadro de updates.</p>
+						<p class="text-justify"><strong>Obs:</strong> Para acompanhar cada detalhe do que foi feito, visite o <a href="https://github.com/gAldeia/gAldeia.github.io">GitHub</a>. O repositório é sempre atualizado ao mesmo tempo que este quadro de updates.</p>
 					</div>
+
+					<p class="text-justify"><b>29/10/2017</b></p>
+					<p class="text-justify"> - Correção da regressão linear.</p>
+					<p class="text-justify"> - Correção de variáveis de classes em SymTree e IT-LS.</p>
 
 					<p class="text-justify"><b>21/10/2017</b></p>
 					<p class="text-justify"> - SymTree agora escreve os resultados na página.</p>
